modified:   Latex_zuza/Introduction.aux 	modified:   Latex_zuza/Introduction.tex 	modified:   Latex_zuza/Report_backbone.aux 	new file:   Latex_zuza/Report_backbone.fdb_latexmk 	new file:   Latex_zuza/Report_backbone.fls 	modified:   Latex_zuza/Report_backbone.log 	modified:   Latex_zuza/Report_backbone.out 	modified:   Latex_zuza/Report_backbone.pdf 	modified:   Latex_zuza/Report_backbone.synctex.gz 	modified:   Latex_zuza/Theoretical_analysis.aux

--- a/Latex_zuza/Introduction.tex
+++ b/Latex_zuza/Introduction.tex
@@ -81,37 +81,43 @@ into 2 groups. Need to have requirements are formulated in a way that the final 
 They are giving detailed insight into the techical characteristics and functionality. Nice to 
 have requirements are decribing the full scale prototype with extensions that fulfills all the user requirements.
 \subsection{Need to have requirements}
-\begin {itemize}
+\begin {enumerate}
 \item Body shape 
-    \begin {itemize}
+    \begin {enumerate}
     \item Should contain a stretcher bed between the two kiels. 
-    Reason: help the lifeguard wit the transportation
+    \\Reason: help the lifeguard wit the transportation
     \item Should have 2 handles on the back and 1 on each side.
-    Reason:useful when loading person and serving as buoy 
+    \\Reason:useful when loading person and serving as buoy 
     \item Should be painted in a bright visible colour regulated by the law.
-    Reson: better visibility and law restrictions
+    \\Reson: better visibility and law restrictions
     \item 
-    \end {itemize}
-\end {itemize}
-\begin {itemize}
+    \end {enumerate}
+\end {enumerate}
+\begin {enumerate}
 \item Speed and endurance 
-    \begin {itemize}
+    \begin {enumerate}
     \item Minimum speed to the person should be 1.1 m/s
+    \\Reason: maximum distance/3sec
     \item Should be able to run for 10 minutes withou recharging
-    \item Should be able to carry 20kg load on the way back
-    \end {itemize}
-\begin 
-\begin {itemize}
+    \\Reason: The weight and price of the battery
+    \item Should be able to carry 50 kg load on the way back
+    \\ Reason: the maximum payload 150 kg / 3. Using 1/3 of the motorpower
+    \end {enumerate}
+\end {enumerate}
+\begin {enumerate}
 \item Navigation 
-    \begin {itemize}
+    \begin {enumerate}
     \item Should use a gps with presision of 3 m 
+    \\Reason: price of the models with the highest precision
     \item Should be able to receive signal in range of 200 m
+    \\Reason:largest distance desired by user
     \item Should have a compass to determine the orientation 
-    \item Should contain a 
-    \end {itemize}
-\end {itemize}
+    \\Reason: determine the orientation of the boat
+    \item Should be able to detect obstacles with sonar
+    \\ Reason: requirement by the university
+    \end {enumerate}
+\end {enumerate}
 
-\end {itemize}
 
 \section{Working cycle description}
 
