--- a/Latex_zuza/Introduction.tex
+++ b/Latex_zuza/Introduction.tex
@@ -1,10 +1,17 @@
 \chapter{Introduction}
 
 \section{Preliminary ideas}
-A brainstorming chart was created to get an insight into each idea suggest for evaluation.
-15 ideas were listed and described buy these categories: mechanical challenges, electronics challenges, 
-software challeges, components, potential market, cost, machine learning, sponsorship potential, user safety.
-Each cathegory consisted from 1 to 5 informations.
+A brainstorming chart was created to get an insight into 
+each idea suggest for evaluation.
+15 ideas were listed and described by these categories: 
+mechanical challenges, electronics challenges, 
+software challeges, components, potential market, cost, machine learning, 
+sponsorship potential, user safety.
+
+Each cathegory consisted from 1 to 5 informations that were relevanant for it. 
+It was a qualitative analysis that helped the team to understand the apllication, 
+define potential market and sponsors. Narrow the estimations of required time, budget and range of skills.
+
 
 
 \begin{table}[h!]
@@ -33,6 +40,13 @@ Tolal & &66 & 98.5 & 72.5 & 70 & 118 & 75.5 & 111.5 & 79.5 \\
     \label{tab:Preliminary_ideas}
 
 \end{table}
+
+Eight out of the initiall fifteen ideas were chosen for the evaluation. 
+The choice was based on the relevancy of the idea to the semester project requirments 
+and time required to complete it. Those two were considered the most 
+important as both, not finished or irrelevant projects will decrease a score 
+of the project.
+
 \newpage
 
 \section{Market research}
@@ -74,7 +88,7 @@ Hover Ark H3 & 1030x630x20 & 13.8 &  & 45min@18 & 200 & RC+autoreturn  \\
 \subsection{Conclusion}
 After the investigation was concluded that all of the products has to be navigated by person to the victim. 
 Only Hover ark is capable of an automatic return. Therefore there is a space for extended functionality of navigation to the victim or to a lifeguard as an assistance. 
-\ref{tab:Preliminary_ideas}
+
 \section{Product requirements}
 After evaluation of user requirements , university requirements, given time and budget, project requirements were created and divided 
 into 2 groups. Need to have requirements are formulated in a way that the final product should be a fully working downscaled prototype. 
@@ -118,7 +132,99 @@ have requirements are decribing the full scale prototype with extensions that fu
     \end {enumerate}
 \end {enumerate}
 
+\section {User research}
+In order to make the boat useful and interesting for the future customers a questionaire was created. 
+It was send to lifegurd, whose input provided us with feedback and improvements, that they think,
+will increase the usefullness of the boat.
 
-\section{Working cycle description}
+The questionaire addressed particular properties of the boat. Such as the shape, maximum load,
+maximum speed, operation time, colour and accesories. All the questions are evaluated below.
+It has a polish and english version and was answered by 5 proffesional lifeguards.
 
+\begin{enumerate}
+    \item The autonomous assistance boat can be a helpful tool for saving people overboard.\\
+            Yes (100\%)\\
+            No (0\%)
+    \item The autonomous assistance boat can be a helpful tool for a lifeguard.\\
+        Yes (100\%)\\
+        No (0\%)
+    \item Shape: (single choice)
+    \begin{enumerate}
+        \item  The person should be able to grab on it, similar to safety ring. (20\%)
+        \item  The person should be able to grab on it and lay on it, like a stretcher. (80\%)
+        \item  There should be a platform on a boat, that allows the lifeguard to start saving the sufferer after getting to them on the water. (20\%)
+    \end{enumerate}
+    \item Accesories: (multiple choice)
+    \begin{enumerate}
+        \item Camera - documet the mission (20\%)
+        \item Warning lights (100\%)
+        \item First aid kit (40\%)
+        \item Warning sound (80\%)
+        \item Showing temperature of water (0\%)
+        \item 5-min oxygen bottle (40\%)
+    \end{enumerate}
+    \item Is it important that the boat/buoy is helping the lifeguard to get to the person?\\
+                Yes (100\%)\\
+                No (0\%)
+    \item Does it make sense that there will be something that holds the lifeguard to the boat so he can take care of the drowning person during coming back to the shore?\\
+                Yes (100\%)\\
+                No (0\%)
+    \item Does the colour of the boat matter?\\
+                Yes (60\%)\\
+                No (40\%)
+    \item If the colour matters, what colour should it be? (Specify if required by law)\\
+            Written answer by interviewees:
+            \begin{enumerate}
+                \item Bright, regulated by rules for coutry's regulations.
+                \item Bright, visible, red would be the best.
+                \item Bright, fluorescent.
+            \end{enumerate} 
+            \newpage
+    \item From your experience what is the average distance [m] from shore to the victim? (multiple choice) 
+    \begin{enumerate}    
+        \item  100 (75\%)
+        \item  200 (25\%)
+        \item  300 (0\%)
+        \item  400 (0\%)
+        \item  500 (0\%)
+        \item  Other: (0\%)
+        \end{enumerate}
+    \item What is the maximum time [min] in which the lifeguard should get to the drawning person so the suferer can be saved in order to survive? (multiple choice)
+    \begin{enumerate}        
+        \item   1 (0\%)
+        \item   2 (20\%)
+        \item   3 (20\%)
+        \item   4 (20\%)
+        \item   5 (20\%)
+        \item   6
+        \item   More than 6 (20\%)
+    \end{enumerate}
+    \item What is the biggest distance [m] from the shore that the suferer is saved at?\\
+            Written answer by interviewees:
+            \begin{enumerate}
+                \item It depends on the time of apnoea, not the distance.
+                \item 90.
+            \end{enumerate} 
+    \item What was the longest time [min] it took you to complete a rescue (time spent in water)? (multiple choice)
+    \begin{enumerate}
+        \item  Up to 10 (40\%)
+        \item  Up to 20 (40\%)
+        \item  Up to 40 (20\%)
+    \end{enumerate}
+    \item Other suggestions and features that you would like to have on your autonomous assistant.\\
+           No given answers by interviewees.     
+\end{enumerate}
+
+\section*{Conclusion}
+The sum up of the user input gives the feedback of the fact that the autonomous life saver boat can be useful project used in real life. 
+\begin{itemize}
+     \item Shape of the boat: the person should be able to grab on it and lay on it, like a stretcher.
+     \item Accesories of the boat: camera - documet the mission, warning lights, first aid kit, warning sound, 5-min oxygen bottle.
+     \item Help with getting to the drwoning person.
+     \item Holder to the boat for the lifeguard.
+     \item Colour of the boat: bright, clearly visible colour, regulated by country's regulations.
+     \item The boat should be able to achive at least 200 m distance from the shore.
+     \item The logest time of getting to the drowning person should not go beyond more than 6 min.
+     \item The longest time the boat should be able to work on the water without recharging should total 30 min.
+\end{itemize}
 
