--- a/Latex_zuza/Report_backbone.tex
+++ b/Latex_zuza/Report_backbone.tex
@@ -20,16 +20,21 @@
  left=20mm,
  top=20mm,
  }
-
-\title{Temporary Tigers\\
-{\Large University of Southern Denmark}}
-\author{ 5 Tigers }
-\date{December 2023}
-
-
-\begin{document}
-
-\maketitle
+ \begin{document}
+\begin{titlepage}
+    \centering
+    \vfill
+    \includegraphics[width=6cm]{SDU_logo}
+    \vskip4cm
+    {\bfseries\Large
+        LiSa boat \\
+        31.12.2023 \\
+        \vskip2cm
+        Almuthanna Al Mosleem, Hritik Roy Chuworthy, Yheng Liu, Zuzana Parnicka\\
+    }    
+    \vfill
+    
+\end{titlepage}
 
 \chapter*{Abstract}
 This work is summarising development process of an autonomous vehicle.
