--- a/Latex_zuza/process.tex
+++ b/Latex_zuza/process.tex
@@ -17,7 +17,7 @@
 \begin{document}
 \maketitle
 
-This document purpose is to describe the working process of the system.\\
+This document's purpose is to describe the working process of the project.
 \begin{enumerate}
     \item We send the signal from the bracelet to the boat that it has to start.
     \item We are sending coordinates every ? sec during the process from the bracelet to the boat (bracelet coordinates). (sending and receiving is done by RF modules in bracelet and boat)
