--- a/Latex_zuza/risk_assessment.tex
+++ b/Latex_zuza/risk_assessment.tex
@@ -9,7 +9,7 @@
 \usepackage{tabularx}
 \usepackage{hyperref}
 \usepackage{biblatex}% references package
-\title{Risk Assesment}
+\title{Risk Assessment}
 \author{Zuzanna Parnicka, Yiheng Liu}
 \date{16 December 2023}
 
