--- a/Latex_zuza/risk_assessment.tex
+++ b/Latex_zuza/risk_assessment.tex
@@ -20,9 +20,9 @@ This Risk Assesment is based on Standards applicable for medical devices. Which 
 Below mentioned standards are taken into account.
 \section{Standards to be satisfied}
 \begin{enumerate}
-    \item ISO 14971 (ISO 14971:2012)
-    The development team may self access and discard any negligible risks for the purpose of the risk assesment.
-    \item Directive 93/42/EEC
+    \item ISO 14971 (ISO 14971:2012)\\
+    The development team may self access and discard any negligible risks for the purpose of the risk assessment.
+    \item Directive 93/42/EEC\\
     This standard is above ISO 14971 in order of application.\\
     All risks must be minimized, regardless of size, and balance against benefit of the divice. Only nonacceptable risks need to be accounted in ISO 14971.
     \item Risk Reduction
