--- a/Latex_zuza/Appendix.tex
+++ b/Latex_zuza/Appendix.tex
@@ -1,19 +1,20 @@
-\documentclass{article}[10pt]
-\usepackage[utf8]{inputenc}%characters and symbols from different languages
-\usepackage{graphicx} % Required for inserting images
-\usepackage[margin=1in]{geometry}
-\usepackage{amsfonts, amssymb, amsmath}
-\usepackage{tikz,pgfplots,hyperref}
-\usepackage{float}
-\usepackage{multirow}
-\usepackage{tabularx}
-\usepackage{hyperref}
-\usepackage{biblatex}% references package
-\usepackage{xcolor,colortbl}
-\title{Appendix}
+% \documentclass{article}[10pt]
+% \usepackage[utf8]{inputenc}%characters and symbols from different languages
+% \usepackage{graphicx} % Required for inserting images
+% \usepackage[margin=1in]{geometry}
+% \usepackage{amsfonts, amssymb, amsmath}
+% \usepackage{tikz,pgfplots,hyperref}
+% \usepackage{float}
+% \usepackage{multirow}
+% \usepackage{tabularx}
+% \usepackage{hyperref}
+% \usepackage{biblatex}% references package
+% \usepackage{xcolor,colortbl}
+% \title{Appendix}
 
-\begin{document}
-\maketitle
+% \begin{document}
+% \maketitle
+\chapter{Appendix}
 %here we make tabkes from davids managment plan
 \begin{table}[h!]
 \begin{center}
@@ -112,4 +113,4 @@
 \end{center}
 \end{table}    
 
-\end{document}
+% \end{document}
