--- a/Latex_zuza/Report_backbone.tex
+++ b/Latex_zuza/Report_backbone.tex
@@ -8,6 +8,7 @@
 \usepackage{float}
 \usepackage{multirow}
 \usepackage{tabularx}
+\usepackage{xcolor,colortbl}
 \usepackage{natbib}%references package
 
 
@@ -30,7 +31,7 @@
         LiSa boat \\
         31.12.2023 \\
         \vskip2cm
-        Almuthanna Al Mosleem, Hritik Roy Chuworthy, Yheng Liu, Zuzana Parnicka\\
+        Almuthanna Al Mosleem, Hritik Roy Chowdhury, Yiheng Liu, Zuzanna Parnicka, Vojtech Il\u{c}\'{i}k\\
     }    
     \vfill
     
@@ -45,7 +46,8 @@ Hardworking group of students that decided to become tigers, (o)hm pardon, engin
 \chapter *{Acknowledgements}
 \include{Introduction}
 \include{Theoretical_analysis}
-
+\include{boat_interview}
+\include{Appendix}
 \bibliographystyle{plain}
 \bibliography{references}
 
