--- a/Latex_zuza/boat_interview.tex
+++ b/Latex_zuza/boat_interview.tex
@@ -1,20 +1,21 @@
-\documentclass{article}[10pt]
-\usepackage{graphicx} % Required for inserting images
-\usepackage[margin=1in]{geometry}
-\usepackage{amsfonts, amssymb, amsmath}
-\usepackage{tikz,pgfplots}
-\usepackage{float}
-\title{interview with Jerome Jouffroy}
-\author{Zuzanna Parnicka, Hritik Roy Chowdhury, Yiheng Liu, Almuthana Al Moslem, Vojtech Ilcik}
-\date{September 2023}
+% \documentclass{article}[10pt]
+% \usepackage{graphicx} % Required for inserting images
+% \usepackage[margin=1in]{geometry}
+% \usepackage{amsfonts, amssymb, amsmath}
+% \usepackage{tikz,pgfplots}
+% \usepackage{float}
+% \title{interview with Jerome Jouffroy}
+% \author{Zuzanna Parnicka, Hritik Roy Chowdhury, Yiheng Liu, Almuthana Al Moslem, Vojtech Ilcik}
+% \date{September 2023}
 
 
-\begin{document}
+% \begin{document}
+\chapter{Interview with Jerome Jouffroy}
 \renewcommand{\labelenumii}{\arabic{enumi}.\arabic{enumii}}
 \renewcommand{\labelenumiii}{\arabic{enumi}.\arabic{enumii}.\arabic{enumiii}}
 \renewcommand{\labelenumiv}{\arabic{enumi}.\arabic{enumii}.\arabic{enumiii}.\arabic{enumiv}}
 
-\maketitle
+% \maketitle
 \section{Our idea}
 Our idea is that a person is wearing a wrist band. And if its pressed it should send signal to the boat which would follow the signal. 
 The boat should be able to get to the wrist band location with minimum accuracy dependent on the GPS module. And after getting information of finished action the boat should 
@@ -40,5 +41,5 @@ I recommend to have two motors, becuase it is easier to control and make it work
 You need to have nice boxes with clips that you could also combine and that are waterproof. The difficulty might be to seal the electronics and battery together.
 
 \end{enumerate}
-\end{document}
+% \end{document}
 
