--- a/Latex_zuza/gpsmodule.tex
+++ b/Latex_zuza/gpsmodule.tex
@@ -21,6 +21,7 @@
 
 \maketitle
 \section{What to consider before choosing GPS module}
+\begin{table}{H}
 \begin{center}
     \begin{tabularx}{0.8\textwidth}{
     | >{\centering\arraybackslash}X  
@@ -50,7 +51,10 @@
     microcontroller compatible with&Arduino\\
     \hline
 \end{tabularx}
+\caption{GPS requirements}
+\label{tab:Table}
 \end{center}
+\end{table}
 
 \section{Considered options and their specifications}
 \begin{enumerate}
@@ -72,14 +76,13 @@ link to datasheet: \url{https://files.banggood.com/2016/11/BN-220%20GPS+Antenna%
 \end{enumerate}
 
 \section{Comparison}
+\begin{table}{H}
 \begin{center} 
         \begin{tabularx}{0.8\textwidth}{
             | >{\centering\arraybackslash}X  
             | >{\centering\arraybackslash}X
             | >{\centering\arraybackslash}X
             | >{\centering\arraybackslash}X | }
-        
-
     \hline
     requirement&Spark Fun RTK-SMA&NEO - 6&BN-220 \\
     \hline
@@ -102,7 +105,10 @@ link to datasheet: \url{https://files.banggood.com/2016/11/BN-220%20GPS+Antenna%
     budget&not in the budget&&about 150 krones but expensive shipping\\
     \hline
 \end{tabularx}
+\caption{GPS modules comparison}
+\label{tab:Table}
 \end{center}
+\end{table}
 
 
 \end{document}
