--- a/Latex_zuza/Appendix.tex
+++ b/Latex_zuza/Appendix.tex
@@ -111,6 +111,7 @@
     \caption{Probability of Occurrence Specifications}
     \label{tab:Figure}
 \end{center}
-\end{table}    
+\end{table}   
+\includepdf[page=-]{bracelet_technical} 
 
 % \end{document}
