--- a/Latex_zuza/Introduction.tex
+++ b/Latex_zuza/Introduction.tex
@@ -220,11 +220,15 @@ The sum up of the user input gives the feedback of the fact that the autonomous 
 \begin{itemize}
      \item Shape of the boat: the person should be able to grab on it and lay on it, like a stretcher.
      \item Accesories of the boat: camera - documet the mission, warning lights, first aid kit, warning sound, 5-min oxygen bottle.
-     \item Help with getting to the drwoning person.
+     \item Help with getting to the drowning person.
      \item Holder to the boat for the lifeguard.
      \item Colour of the boat: bright, clearly visible colour, regulated by country's regulations.
      \item The boat should be able to achive at least 200 m distance from the shore.
      \item The logest time of getting to the drowning person should not go beyond more than 6 min.
      \item The longest time the boat should be able to work on the water without recharging should total 30 min.
 \end{itemize}
+User requirements will have to be adjusted to product requirements, time available to finish the project and the resources that are in the budget 
+and it had to be possible to be done with what is available at university. The project can be developed with time and the suggestions from user can be 
+implemented. What is the main goal is to make the requirements of the semster project, which is to make an autonomous vehicle. Then the 
+other parts can be implemented. Some points of the Conclusion are nice to have, since all things mentioned above have impact.
 
